<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_dict"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_dict" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_setting" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_history" />
    </group>

</menu>
