<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LearnWritingActivity"
    android:orientation="vertical">

    <LinearLayout
        android:paddingTop="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/pinyin_textview_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="23dp"/>

        <TextView
            android:id="@+id/phrase_textview_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="23dp"/>

        <TextView
            android:id="@+id/jianfan_textview_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jianfan"
            android:textSize="23dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="horizontal">

        <com.test.view.HanziView
            android:id="@+id/simplified_word_one"
            android:layout_width="50dp"
            android:layout_height="match_parent"/>

        <FrameLayout
            android:layout_width="16dp"
            android:layout_height="match_parent" />

        <com.test.view.HanziView
            android:id="@+id/traditional_word_one"
            android:layout_width="50dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <com.test.view.HanziView
        android:id="@+id/hanzi_view_one"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_clean_one"
            android:text="@string/button_clean"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/button_next_one"
            android:text="@string/button_next"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>